--- a/src/app/components/performer-list/performer-list.component.html
+++ b/src/app/components/performer-list/performer-list.component.html
@@ -15,7 +15,7 @@
               <img src="{{musician.image}}" alt="">
             </div>
             <div class="musician-name">
-              <span id="name">{{musician.name}}</span>
+              <span id="musician-name">{{musician.name}}</span>
             </div>
             <div class="artist-type">
 
