--- a/src/app/components/musician-detail/musician-detail.component.html
+++ b/src/app/components/musician-detail/musician-detail.component.html
@@ -3,15 +3,15 @@
     <div class="img-log">
       <img src="{{musicianDetail.image}}" alt="">
       <div class="name">
-        <span>{{musicianDetail.name}}</span>
+        <span id="musician-name">{{musicianDetail.name}}</span>
       </div>
     </div>
     <div class="container-information-detail">
       <div class="detail">
-        <span>{{musicianDetail.description}} </span>
+        <span id="musician-description">{{musicianDetail.description}} </span>
       </div>
       <div class="detail">
-        <span>Nacimiento: {{musicianDetail.birthDate }} </span>
+        <span id="musician-birth-date">Nacimiento: {{musicianDetail.birthDate | date: 'yyyy-MM-dd' }} </span>
       </div>
       <div class="detail">
         <span>Tipo de artista: Musico </span>
@@ -22,7 +22,7 @@
         <button type="button" class="design-button" (click)="goBack()">Regresar</button>
       </div>
       <div class="show-comment">
-        <button type="button" class="design-button" >Ver premios</button>
+        <button type="button" class="design-button" (click)="goBack()">Ver premios</button>
       </div>
     </div>
   </div>
@@ -52,13 +52,13 @@
         <img class="album_cover" src="{{album.cover}}" alt="" width="50px" height="50px"/>
       </div>
       <div class="container-div">
-        <span>{{album.name}}</span>
+        <span id="album-name">{{album.name}}</span>
       </div>
       <div class="container-div">
-        <span>{{album.releaseDate| date: 'yyyy-MM-dd' }}</span>
+        <span id="album-release-date">{{album.releaseDate| date: 'yyyy-MM-dd' }}</span>
       </div>
       <div class="container-div">
-        <span>{{album.recordLabel}}</span>
+        <span id="album-record-label">{{album.recordLabel}}</span>
       </div>
     </div>
   </div>
