--- a/src/app/components/band-detail/band-detail.component.html
+++ b/src/app/components/band-detail/band-detail.component.html
@@ -1,7 +1,7 @@
 <div class="container-detail-band">
   <div class="container-information">
     <div class="img-log">
-      <img src="{{bandDetail.image}}" alt="">
+      <img src="{{bandDetail.image}}" alt="imagen de la banda {{bandDetail.name}}">
       <div class="name">
         <span id="band-name">{{bandDetail.name}}</span>
       </div>
@@ -14,7 +14,7 @@
         <span>Creación: {{bandDetail.creationDate | date: 'yyyy-MM-dd' }} </span>
       </div>
       <div class="detail">
-        <span>Tipo de artista: Musico </span>
+        <span>Tipo de artista: Banda </span>
       </div>
     </div>
     <div class="container-button">
@@ -49,7 +49,7 @@
  <div class="row-information" *ngFor="let album of bandDetail.albums; let i = index">
     <div class="table-body">
       <div class="container-div">
-        <img class="album_cover" src="{{album.cover}}" alt="" width="50px" height="50px"/>
+        <img class="album_cover" src="{{album.cover}}" alt="Imagen de portada del album {{album.name}} de la banda {{bandDetail.name}}" width="50px" height="50px"/>
       </div>
       <div class="container-div">
         <span>{{album.name}}</span>
