--- a/src/app/components/musician-detail/musician-detail.component.html
+++ b/src/app/components/musician-detail/musician-detail.component.html
@@ -1,7 +1,7 @@
 <div class="container-detail-musician">
   <div class="container-information">
     <div class="img-log">
-      <img src="{{musicianDetail.image}}" alt="">
+      <img src="{{musicianDetail.image}}" alt="imagen del musico{{musicianDetail.name}}">
       <div class="name">
         <span id="musician-name">{{musicianDetail.name}}</span>
       </div>
@@ -49,7 +49,7 @@
  <div class="row-information" *ngFor="let album of musicianDetail.albums; let i = index">
     <div class="table-body">
       <div class="container-div">
-        <img class="album_cover" src="{{album.cover}}" alt="" width="50px" height="50px"/>
+        <img class="album_cover" src="{{album.cover}}" alt="Imagen de portada del album {{album.name}} del musico {{musicianDetail.name}}" width="50px" height="50px"/>
       </div>
       <div class="container-div">
         <span id="album-name">{{album.name}}</span>
