FeatureHU01 : Correciones de usabilidad para las vistas de detalle

--- a/src/app/components/comment/comment.component.html
+++ b/src/app/components/comment/comment.component.html
@@ -2,12 +2,12 @@
   <div class="container-comment-detail">
     <div class="img-log">
       <div class="genre">
-        <span>Comentario</span>
+        <h1>Comentario</h1>
       </div>
     </div>
     <div class="container-comment-text">
       <div>
-        <textarea class="input-comment">       </textarea>
+        <textarea class="input-comment" id="comment" placeholder="Diligencie un comentario">{{textInput}}</textarea>
       </div>
       <div class="container-options">
         <select class="form-select" aria-label="Default select example">
