--- a/src/app/shared/components/card-albumes/card-albumes.component.scss
+++ b/src/app/shared/components/card-albumes/card-albumes.component.scss
@@ -25,7 +25,7 @@
     .album-title {
         text-align: center;
         padding-top: 39px;
-        span {
+        h1 {
           font-weight: bold;
           font-family: Helvetica, Arial, Verdana, Tahoma, sans-serif;
           font-size: 24px;
