--- a/src/app/shared/components/card-albumes/card-albumes.component.html
+++ b/src/app/shared/components/card-albumes/card-albumes.component.html
@@ -4,7 +4,7 @@
         <img src="{{item.image}}" alt="">
       </div>
       <div class="album-title">
-        <span id="title {{i}}">{{item.titleAlbum}}</span>
+        <h1 id="title {{i}}">{{item.titleAlbum}}</h1>
       </div>
       <div class="album-group">
         <span>{{item.groupAlbum}}</span>
