FEATUREHU001: Removi errro de usabilidad para la pantalla de comentarios

--- a/src/app/components/comment/comment.component.html
+++ b/src/app/components/comment/comment.component.html
@@ -10,7 +10,7 @@
         <textarea class="input-comment" id="comment" placeholder="Diligencie un comentario">{{textInput}}</textarea>
       </div>
       <div class="container-options">
-        <select class="form-select" aria-label="Default select example">
+        <select class="item" aria-label="Default select example">
           <option selected>Calificacion</option>
           <option value="1">Bueno</option>
           <option value="2">Regular</option>
