FeatureHu06: Se modifica la vista

--- a/src/app/components/collector-detail/collector-detail.component.html
+++ b/src/app/components/collector-detail/collector-detail.component.html
@@ -1,6 +1,7 @@
 
 <div class="container-detail-collector">
   <div class="container-information">
+
     <div class="img-log">
       <div class="name">
         <span>{{collectorDetail.name}}</span>
@@ -8,7 +9,7 @@
     </div>
     <div class="container-button">
       <div>
-        <button type="button" class="design-button" (click)="goBack()">Regresar</button>
+        <button type="button" class="design-button" (click)="goBack()" name="Regresar a lista de albumes">Regresar</button>
       </div>
     </div>
   </div>
@@ -20,21 +21,21 @@
 <table class="table">
   <thead>
     <tr>
-      <th class="h4">Comentario</th>
+      <th class="h4" width="35%">Album</th>
+      <th class="h4" width="40%">Comentario</th>
       <th class="h4">Rating</th>
-      <th class="h4">Album</th>
     </tr>
   </thead>
   <tbody>
     <tr *ngFor="let c of collectorDetail.comments" class="contenido">
+      <td *ngFor="let alb of albumesOfComments">
+        <dd>{{alb.name}}</dd>
+      </td>
       <td>
         <dd>{{c.description}}</dd>
       </td>
       <td>
         <dd>{{c.rating}}</dd>
-      </td>
-      <td *ngFor="let alb of albumesOfComments" >
-        <dd>{{alb.name}}</dd>
       </td>
   </tr>
   </tbody>
@@ -51,11 +52,11 @@
 <h1> Artistas favoritos de {{collectorDetail.name}}</h1>
 </div>
 <div class="container-fluid">
-<table class="table" cellspacing="10" cellpadding="10">
+<table class="table">
   <thead>
     <tr>
-      <th class="h4">Nombre</th>
-      <th class="h4">Foto</th>
+      <th class="h4" width="75%">Nombre</th>
+      <th class="h4" width="25%">Foto</th>
     </tr>
   </thead>
   <tbody>
@@ -64,7 +65,7 @@
         <dd>{{p.name}}</dd>
       </td>
       <td>
-        <img src="{{p.image}}" alt="">
+        <img src="{{p.image}}" alt="Foto de {{p.name}}">
       </td>
   </tr>
   </tbody>
@@ -80,11 +81,13 @@
 <h1> Albumes de {{collectorDetail.name}}</h1>
 </div>
 <div class="container-fluid">
-<table class="table" cellspacing="10" cellpadding="10">
+<table class="table" >
   <thead>
     <tr>
-      <th class="h4">Nombre</th>
-      <th class="h4">Foto</th>
+      <th class="h4" width="25%">Nombre</th>
+      <th class="h4" width="25%">Foto</th>
+      <th class="h4" width="25%">Precio</th>
+      <th class="h4" width="25%">Estado</th>
     </tr>
   </thead>
   <tbody>
@@ -93,7 +96,13 @@
         <dd>{{a.name}}</dd>
       </td>
       <td>
-        <img src="{{a.cover}}" alt="">
+        <img src="{{a.cover}}" alt="foto del album {{a.name}}">
+      </td>
+      <td *ngFor="let alb of collectorDetail.collectorAlbums">
+        <dd>{{alb.price}}</dd>
+      </td>
+      <td *ngFor="let alb of collectorDetail.collectorAlbums">
+        <dd>{{alb.status}}</dd>
       </td>
   </tr>
   </tbody>
