Se modifica boton regresar

--- a/src/app/components/collector-detail/collector-detail.component.html
+++ b/src/app/components/collector-detail/collector-detail.component.html
@@ -9,7 +9,7 @@
     </div>
     <div class="container-button">
       <div>
-        <button type="button" class="design-button" (click)="goBack()" name="Regresar a lista de albumes">Regresar</button>
+        <button  class="button-style" (click)="goBack()" name="Regresar a lista de albumes">Regresar</button>
       </div>
     </div>
   </div>
