--- a/src/app/components/collector-detail/collector-detail.component.scss
+++ b/src/app/components/collector-detail/collector-detail.component.scss
@@ -35,11 +35,10 @@
       padding-left: 900px;
       padding-right: 88px;
       padding-top: 32px;
-      button {
+      .button-style {
         width: 190px;
         height: 44px;
         background: black;
-        border-color: black;
         color: #FFFFFF;
       }
     }
