--- a/src/app/shared/components/card-albumes/card-albumes.component.html
+++ b/src/app/shared/components/card-albumes/card-albumes.component.html
@@ -1,10 +1,9 @@
 <div class="container-album">
-
-  <div *ngFor="let item of albumes; let i = index" class="detail-album" (click)="clickItem(item.id)" id="{{i}}">
-      <div class="img-driver">
+  <div *ngFor="let item of albumes; let i = index" class="detail-album" (click)="clickItem(item.id)" [ngClass]="{'height-element': item.height}" id="{{i}}">
+      <div class="img-driver" *ngIf="item.image !== '' ">
         <img src="{{item.image}}" alt="">
       </div>
-      <div class="album-title">
+      <div class="album-title" *ngIf="item.titleAlbum !== '' ">
         <h1 id="title {{i}}">{{item.titleAlbum}}</h1>
       </div>
       <div class="album-group" *ngIf="item.groupAlbum !== '' ">
