--- a/src/app/components/detail-album/detail-album.component.scss
+++ b/src/app/components/detail-album/detail-album.component.scss
@@ -1,7 +1,7 @@
 .container-detail-album {
   background: black;
   width: 100%;
-  height: 100vh;
+  height: 100%;
 
   .container-information {
     display: flex;
