--- a/src/app/components/collector-detail/collector-detail.component.scss
+++ b/src/app/components/collector-detail/collector-detail.component.scss
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: row;
     padding-left: 100px;
+    padding-top: 40px;
 
     .img-log {
       padding-top: 40px;
@@ -32,7 +33,7 @@
 
 
     .container-button {
-      padding-left: 900px;
+      padding-left: 400px;
       padding-right: 88px;
       padding-top: 32px;
       .button-style {
