--- a/src/app/components/performer-list/performer-list.component.html
+++ b/src/app/components/performer-list/performer-list.component.html
@@ -13,7 +13,7 @@
               <span>Músico</span>
             </div>
             <div class="fav-btn">
-              <a href="#" class="btn btn-primary">Favorite</a>
+              <a href="#" class="btn btn-outline-dark">Favorite</a>
             </div>
         </div>
       </div>
@@ -31,11 +31,10 @@
             <span>Banda</span>
           </div>
           <div class="fav-btn">
-            <a href="#" class="btn btn-primary">Favorite</a>
+            <a href="#" class="btn btn-outline-dark">Favorite</a>
           </div>
       </div>
     </div>
-
 
 
   </div>
