--- a/src/app/components/band-detail/band-detail.component.html
+++ b/src/app/components/band-detail/band-detail.component.html
@@ -4,7 +4,7 @@
     <div class="img-log">
       <img src="{{bandDetail.image}}" alt="imagen de la banda {{bandDetail.name}}">
       <div class="name">
-        <span id="band-name">{{bandDetail.name}}</span>
+       <h1> <span id="band-name">{{bandDetail.name}}</span></h1>
       </div>
     </div>
     <div class="container-information-detail">
@@ -50,7 +50,7 @@
  <div class="row-information" *ngFor="let album of bandDetail.albums; let i = index">
     <div class="table-body">
       <div class="container-div">
-        <img class="album_cover" src="{{album.cover}}" alt="Imagen de portada del album {{album.name}} de la banda {{bandDetail.name}}" width="50px" height="50px"/>
+        <img class="album-cover" src="{{album.cover}}" alt="Imagen de portada del album {{album.name}} de la banda {{bandDetail.name}}" width="50px" height="50px"/>
       </div>
       <div class="container-div">
         <span>{{album.name}}</span>
