Se solucionan bugs de sonar

--- a/src/app/components/collector-detail/collector-detail.component.html
+++ b/src/app/components/collector-detail/collector-detail.component.html
@@ -19,11 +19,12 @@
 
 <div class="container-fluid">
 <table class="table">
+  <caption>Comentarios</caption>
   <thead>
     <tr>
-      <th class="h4" width="35%">Album</th>
-      <th class="h4" width="40%">Comentario</th>
-      <th class="h4">Rating</th>
+      <th class="h4" width="35%" id="columna-album">Album</th>
+      <th class="h4" width="40%" id="columna-comentario">Comentario</th>
+      <th class="h4" id="columna-rating">Rating</th>
     </tr>
   </thead>
   <tbody>
@@ -53,10 +54,11 @@
 </div>
 <div class="container-fluid">
 <table class="table">
+  <caption>Artistas Favoritos</caption>
   <thead>
     <tr>
-      <th class="h4" width="75%">Nombre</th>
-      <th class="h4" width="25%">Foto</th>
+      <th class="h4" width="75%" id="columna-nombre">Nombre</th>
+      <th class="h4" width="25%" id="columna-foto">Foto</th>
     </tr>
   </thead>
   <tbody>
@@ -82,12 +84,13 @@
 </div>
 <div class="container-fluid">
 <table class="table" >
+  <caption>Albumes</caption>
   <thead>
     <tr>
-      <th class="h4" width="27%">Nombre</th>
-      <th class="h4" width="25%">Foto</th>
-      <th class="h4" width="24%">Precio</th>
-      <th class="h4" width="25%">Estado</th>
+      <th class="h4" width="27%" id="columna-nombre-Album">Nombre</th>
+      <th class="h4" width="25%" id="columna-foto">Foto</th>
+      <th class="h4" width="24%" id="columna-precio">Precio</th>
+      <th class="h4" width="25%" id="columna-estado">Estado</th>
     </tr>
   </thead>
   <tbody>
