--- a/src/app/components/band-detail/band-detail.component.html
+++ b/src/app/components/band-detail/band-detail.component.html
@@ -53,13 +53,13 @@
         <img class="album-cover" src="{{album.cover}}" alt="Imagen de portada del album {{album.name}} de la banda {{bandDetail.name}}" width="50px" height="50px"/>
       </div>
       <div class="container-div">
-        <span>{{album.name}}</span>
+        <span id ='album-name-{{i}}'>{{album.name}}</span>
       </div>
       <div class="container-div">
-        <span>{{album.releaseDate| date: 'yyyy-MM-dd' }}</span>
+        <span id ='album-release-date-{{i}}'>{{album.releaseDate| date: 'yyyy-MM-dd' }}</span>
       </div>
       <div class="container-div">
-        <span>{{album.recordLabel}}</span>
+        <span id ='album-record-label-{{i}}'>{{album.recordLabel}}</span>
       </div>
     </div>
   </div>
