--- a/src/app/components/band-detail/band-detail.component.scss
+++ b/src/app/components/band-detail/band-detail.component.scss
@@ -52,8 +52,9 @@
       button {
         width: 190px;
         height: 44px;
+        width: 190px;
+        height: 44px;
         background: black;
-        border-color: #000000;
         color: #FFFFFF;
       }
 
