Se ajusta la vista

--- a/src/app/components/collector-detail/collector-detail.component.html
+++ b/src/app/components/collector-detail/collector-detail.component.html
@@ -88,7 +88,7 @@
   <thead>
     <tr>
       <th class="h4" width="27%" id="columna-nombre-Album">Nombre</th>
-      <th class="h4" width="25%" id="columna-foto">Foto</th>
+      <th class="h4" width="25%" id="columna-foto-Album">Foto</th>
       <th class="h4" width="24%" id="columna-precio">Precio</th>
       <th class="h4" width="25%" id="columna-estado">Estado</th>
     </tr>
