--- a/src/app/components/performer-list/performer-list.component.scss
+++ b/src/app/components/performer-list/performer-list.component.scss
@@ -4,15 +4,14 @@
   width: 100%;
   height: 100vh;
 
-
-  .container-bands {
+  .container-performers {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     max-width: 100%;
     height: auto;
 
-    .detail-band {
+    .detail-performer{
       background: white;
       width: 362px;
       margin-left: 143px;
@@ -31,7 +30,7 @@
         }
       }
 
-      .band-name {
+      .performer-name {
           text-align: center;
           padding-top: 39px;
           span {
@@ -62,60 +61,4 @@
     }
   }
 
-  .container-musicians {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    max-width: 100%;
-    height: auto;
-
-    .detail-musician{
-      background: white;
-      width: 362px;
-      margin-left: 143px;
-      margin-top: 97px;
-
-      .img-driver {
-        text-align: center;
-        width: 100%;
-        padding-top: 17px;
-        img {
-          border-radius:150px;
-          border: 1px solid #707070;
-          opacity: 1;
-          width: 98px;
-          height: 98px;
-        }
-      }
-
-      .musician-name {
-          text-align: center;
-          padding-top: 39px;
-          span {
-            font-weight: bold;
-            font-family: Helvetica, Arial, Verdana, Tahoma, sans-serif;
-            font-size: 24px;
-          }
-      }
-
-      .artist-type {
-        text-align: center;
-        padding-top: 16px;
-        span {
-          opacity: 100%;
-          color: #000000;
-          font-family: Helvetica, Arial, Verdana, Tahoma, sans-serif;
-          font-size: 16px;
-        }
-      }
-
-
-    }
-    .fav-btn{
-      text-align: center;
-      padding-top: 16px;
-      padding-bottom: 16px;
-
-    }
-  }
 }
