--- a/src/app/components/band-detail/band-detail.component.html
+++ b/src/app/components/band-detail/band-detail.component.html
@@ -23,7 +23,7 @@
         <button type="button" class="design-button" (click)="goBack()">Regresar</button>
       </div>
       <div class="show-comment">
-        <button type="button" class="design-button" (click)="goBack()">Ver premios</button>
+        <button type="button" class="design-button" (click)="addMusician(bandDetail)">Añadir músico</button>
       </div>
     </div>
   </div>
