--- a/src/app/components/performer-list/performer-list.component.scss
+++ b/src/app/components/performer-list/performer-list.component.scss
@@ -14,6 +14,7 @@
     .detail-performer{
       background: white;
       width: 362px;
+      height: 362px;
       margin-left: 143px;
       margin-top: 97px;
 
