--- a/src/app/components/band-detail/band-detail.component.html
+++ b/src/app/components/band-detail/band-detail.component.html
@@ -63,5 +63,33 @@
       </div>
     </div>
   </div>
+  <div class="list-information">
+    <hr/>
+    <div class="table-title">
+      <div class="container-div">
+        <span>Músico</span>
+      </div>
+      <div class="container-div">
+        <span>Nombre</span>
+      </div>
+      <div class="container-div">
+        <span>Fecha de nacimiento</span>
+      </div>
+    </div>
+    <hr/>
+  </div>
+ <div class="row-information" *ngFor="let musician of bandDetail.musicians; let i = index">
+    <div class="table-body">
+      <div class="container-div">
+        <img class="musician-image-{{i}}" src="{{musician.image}}" alt="Imagen de musico {{musician.name}} de la banda {{bandDetail.name}}" width="50px" height="50px"/>
+      </div>
+      <div class="container-div">
+        <span id ='musician-name-{{i}}'>{{musician.name}}</span>
+      </div>
+      <div class="container-div">
+        <span id ='musician-birth-date-{{i}}'>{{ musician.birthDate | date: 'yyyy-MM-dd' }}</span>
+      </div>
+    </div>
+  </div>
 </ng-container>
 </div>
