--- a/src/app/components/band-detail/band-detail.component.html
+++ b/src/app/components/band-detail/band-detail.component.html
@@ -20,7 +20,7 @@
     </div>
     <div class="container-button">
       <div>
-        <button type="button" class="design-button" (click)="goBack()">Regresar</button>
+        <button type="button" class="design-button" (click)="addPrize(bandDetail)">Añadir premio</button>
       </div>
       <div class="show-comment">
         <button type="button" class="design-button" (click)="addMusician(bandDetail)">Añadir músico</button>
