--- a/src/app/components/albumes/albumes.component.html
+++ b/src/app/components/albumes/albumes.component.html
@@ -1,7 +1,9 @@
-<div class="contenedor-principal">
+<div class="container-home">
 
     <app-search *ngIf="getHeader()" (text)="searchText($event)"></app-search>
     <app-cards [albumes]="albums" (index)="showDetailAlbum($event)"></app-cards>
 
-
+    <div class="btn-added" (click)="addAlbum()">
+      <img src="assets/img/added.svg" alt="add album">
+    </div>
 </div>
