--- a/src/app/components/albumes/albumes.component.scss
+++ b/src/app/components/albumes/albumes.component.scss
@@ -1,5 +1,39 @@
-.contenedor-principal {
+.container-home {
     background: black;
     padding-bottom: 64px;
-    height: 100%;
+    height: 100vh;
+
+  .btn-added {
+    font-size: 16px; /* Cambiar el tamaño de la tipografia */
+    text-transform: uppercase; /* Texto en mayusculas */
+    font-weight: bold; /* Fuente en negrita o bold */
+    color: #ffffff; /* Color del texto */
+    border-radius: 5px; /* Borde del boton */
+    letter-spacing: 2px; /* Espacio entre letras */
+    padding: 18px 30px; /* Relleno del boton */
+    position: fixed;
+    bottom: 40px;
+    right: 40px;
+    transition: all 300ms ease 0ms;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    z-index: 99;
+
+    img {
+      height: 44px;
+      width: 44px;
+    }
+  }
+  .btn-added:hover {
+    background-color: #1f1f1f; /* Color de fondo al pasar el cursor */
+    box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.3);
+    transform: translateY(-7px);
+  }
+  @media only screen and (max-width: 600px) {
+    .btn-added {
+      font-size: 14px;
+      padding: 12px 20px;
+      bottom: 20px;
+      right: 20px;
+    }
+  }
 }
