--- a/src/app/components/add-album/add-album.component.html
+++ b/src/app/components/add-album/add-album.component.html
@@ -19,7 +19,8 @@
       <span>Descripcion</span>
     </div>
     <textarea class="input-comment" id="comment" placeholder="Diligencie un comentario"   #comment_text
-              (paste)="keyup($event.clipboardData.getData('text/plain'))"  (keyup)="keyup(comment_text.value)"></textarea>
+              (paste)="keyup($event.clipboardData.getData('text/plain'))"  (keyup)="keyup(comment_text.value)">
+    </textarea>
     <div class="toast-style">
       <app-toast-message   [toast]="comment"></app-toast-message>
     </div>
@@ -52,7 +53,7 @@
       <button  [disabled]="!form.valid" (click)="addedAlbum()"  [ngClass]="!form.valid ? 'button-disabled': 'button-enabled'">Aceptar</button>
     </div>
     <div class="show-comment">
-      <button class="button-enabled">Cancelar</button>
+      <button class="button-enabled"  (click)="cancel()">Cancelar</button>
     </div>
   </div>
 
