--- a/src/app/components/collector-detail/collector-detail.component.scss
+++ b/src/app/components/collector-detail/collector-detail.component.scss
@@ -42,9 +42,12 @@
         background: black;
         color: #FFFFFF;
       }
+
+      .button{
+        padding-bottom: 20px;
+      }
     }
   }
-
   .h4{
     color:white;
     font-size: 24px;
