SFeatureHU13: Se cr4ea formulario para asociar musico con coleccionista

--- a/src/app/components/performer-list/performer-list.component.html
+++ b/src/app/components/performer-list/performer-list.component.html
@@ -13,7 +13,9 @@
               <span>Músico</span>
             </div>
             <div class="fav-btn">
-              <a href="#" class="btn btn-outline-dark">Favorite</a>
+              <div class="button">
+                <button  class="button-style" (click)="addMusicianToFavorite(musician)" name="Add album to performer">Favorite</button>
+              </div>
             </div>
         </div>
       </div>
