FeatureHU13: Se agrega formulario para sociar banda a coleccionistas

--- a/src/app/components/performer-list/performer-list.component.html
+++ b/src/app/components/performer-list/performer-list.component.html
@@ -14,7 +14,7 @@
             </div>
             <div class="fav-btn">
               <div class="button">
-                <button  class="button-style" (click)="addMusicianToFavorite(musician)" name="Add album to performer">Favorite</button>
+                <button  class="button-style" (click)="addMusicianToFavorite(musician)" name="Add collect to performer">Favorite</button>
               </div>
             </div>
         </div>
@@ -33,7 +33,9 @@
             <span>Banda</span>
           </div>
           <div class="fav-btn">
-            <a href="#" class="btn btn-outline-dark">Favorite</a>
+            <div class="button">
+              <button  class="button-style" (click)="addBandToFavorite(band)" name="Add collect to performer">Favorite</button>
+            </div>
           </div>
       </div>
     </div>
