--- a/src/app/shared/components/input-text/input-text.component.html
+++ b/src/app/shared/components/input-text/input-text.component.html
@@ -1,7 +1,7 @@
 <div class="container-input">
 
   <div class="title-header">
-    <h1>{{element.title}}</h1>
+    <h1 i18n>{{element.title}}</h1>
   </div>
   <input
     #input
