--- a/src/app/components/add-album/add-album.component.html
+++ b/src/app/components/add-album/add-album.component.html
@@ -16,9 +16,9 @@
 
   <div class="comment">
     <div class="title">
-      <span>Descripcion</span>
+      <span i18n>Description</span>
     </div>
-    <textarea class="input-comment" id="comment" placeholder="Diligencie un comentario"   #comment_text
+    <textarea class="input-comment" id="comment" placeholder="Fill out a comment"   #comment_text
               (paste)="keyup($event.clipboardData.getData('text/plain'))"  (keyup)="keyup(comment_text.value)">
     </textarea>
     <div class="toast-style">
@@ -28,7 +28,7 @@
 
   <div class="records">
     <div class="title">
-      <span>Genero</span>
+      <span i18n>Gender</span>
     </div>
     <div class="container-options">
       <select class="item" aria-label="Default select example"  [ngModel]="genreLabelSelect" (ngModelChange)="onChangeGenre($event)">
@@ -39,7 +39,7 @@
 
   <div class="records">
     <div class="title">
-      <span>Record</span>
+      <span i18n>Record</span>
     </div>
     <div class="container-options">
       <select class="item" aria-label="Default select example"  [ngModel]="recordLabelSelect" (ngModelChange)="onChangeSelectRecord($event)">
@@ -50,10 +50,10 @@
 
   <div class="container-button">
     <div class="show-comment">
-      <button  [disabled]="!form.valid" (click)="addedAlbum()"  [ngClass]="!form.valid ? 'button-disabled': 'button-enabled'">Aceptar</button>
+      <button  [disabled]="!form.valid" (click)="addedAlbum()"  [ngClass]="!form.valid ? 'button-disabled': 'button-enabled'" i18n>Accept</button>
     </div>
     <div class="show-comment">
-      <button class="button-enabled"  (click)="cancel()">Cancelar</button>
+      <button class="button-enabled"  (click)="cancel()" i18n>Cancel</button>
     </div>
   </div>
 
