--- a/src/app/components/detail-album/detail-album.component.html
+++ b/src/app/components/detail-album/detail-album.component.html
@@ -8,24 +8,24 @@
     </div>
     <div class="container-information-detail">
       <div class="detail">
-        <span>Artistas: {{album.recordLabel}}</span>
+        <span i18n>Artists: {{album.recordLabel}}</span>
       </div>
       <div class="detail">
-        <span>Lanzamiento: {{album.releaseDate  | date: 'yyyy-MM-dd' }} </span>
+        <span i18n>Release: {{album.releaseDate  | date: 'yyyy-MM-dd' }} </span>
       </div>
       <div class="detail">
-        <span>Genero: {{album.genre}} </span>
+        <span i18n>Genre: {{album.genre}} </span>
       </div>
       <div class="detail">
-        <span>{{album.description}}</span>
+        <span i18n>{{album.description}}</span>
       </div>
     </div>
     <div class="container-button">
       <div class="show-comment">
-        <button  class="button-style" (click)="goBack()">Regresar</button>
+        <button  class="button-style" (click)="goBack()" i18n>Go Back</button>
       </div>
       <div class="show-comment">
-        <button class="button-style" (click)="checkComment()">Ver comentarios</button>
+        <button class="button-style" (click)="checkComment()" i18n>Show  comment</button>
       </div>
     </div>
   </div>
@@ -34,13 +34,13 @@
   <div class="row-information" *ngFor="let item of album.tracks; let i = index">
     <div class="table-title">
       <div class="container-div">
-        <span>{{item.id}}</span>
+        <span i18n>{{item.id}}</span>
       </div>
       <div class="container-div">
-        <span>{{item.name}}</span>
+        <span i18n>{{item.name}}</span>
       </div>
       <div class="container-div">
-        <span>{{item.duration}} min</span>
+        <span i18n>{{item.duration}} min</span>
       </div>
     </div>
   </div>
