--- a/src/app/shared/components/title-table/title-table.component.html
+++ b/src/app/shared/components/title-table/title-table.component.html
@@ -2,7 +2,7 @@
     <hr/>
     <div class="table-title" >
       <div class="container-div" *ngFor="let item of titlesTable; let i = index">
-        <span>{{item.title}}</span>
+        <span i18n>{{item.title}}</span>
       </div>
     </div>
     <hr/>
